--- a/assignement_b/CMakeLists.txt
+++ b/assignement_b/CMakeLists.txt
@@ -1,35 +1,19 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(assignement_b)
 
-# Check for c++11 / c++0x support
-include(CheckCXXCompilerFlag)
-CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
-CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
-if(COMPILER_SUPPORTS_CXX11)
-    set(CMAKE_CXX_FLAGS "-std=c++11")
-elseif(COMPILER_SUPPORTS_CXX0X)
-    set(CMAKE_CXX_FLAGS "-std=c++0x")
-else()
-    message(FATAL_ERROR "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
-endif()
 
 # Load catkin and all dependencies required for this package
 find_package(catkin REQUIRED COMPONENTS
   roscpp
-  gazebo_ros
+  sensor_msgs
+  std_msgs
 )
-
-# Depend on system install of Gazebo
-find_package(gazebo REQUIRED)
 
 link_directories(${GAZEBO_LIBRARY_DIRS})
-include_directories(${Boost_INCLUDE_DIR} ${catkin_INCLUDE_DIRS} ${GAZEBO_INCLUDE_DIRS})
+include_directories(${catkin_INCLUDE_DIRS})
 
-catkin_package(
-  DEPENDS
-    roscpp
-    gazebo_ros
-)
+catkin_package()
 
-add_library(${PROJECT_NAME} src/simple_world_plugin.cpp)
-target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${GAZEBO_LIBRARIES})
+add_executable(${PROJECT_NAME}_node src/reactive_turtlebot.cpp)
+
+target_link_libraries(${PROJECT_NAME}_node ${catkin_LIBRARIES})
