--- a/assignement_b/package.xml
+++ b/assignement_b/package.xml
@@ -57,6 +57,8 @@
   <exec_depend>roscpp</exec_depend>
   <build_depend>sensor_msgs</build_depend>
   <exec_depend>sensor_msgs</exec_depend>
+  <build_depend>geometry_msgs</build_depend>
+  <exec_depend>geometry_msgs</exec_depend>
   <build_depend>std_msgs</build_depend>
   <exec_depend>std_msgs</exec_depend>
 
