--- a/assignement_b/package.xml
+++ b/assignement_b/package.xml
@@ -59,6 +59,8 @@
   <exec_depend>sensor_msgs</exec_depend>
   <build_depend>std_msgs</build_depend>
   <exec_depend>std_msgs</exec_depend>
+  <build_depend>geometry_msgs</build_depend>
+  <exec_depend>geometry_msgs</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
